--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,9 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+    @apply bg-white text-black; /* Set background and text colors for light mode */
+}
 @layer components {
     .card {
         @apply flex flex-col bg-white my-4 rounded-xl border border-gray-200;
+    }
+
+    .card-header{
+        @apply flex flex-row items-center p-5;
+
+    }
+
+    .card-body{
+
+    }
+
+    .card-footer{
+        @apply border-t border-t-gray-200 p-3 mt-5;
     }
 }
 
